add subtype equipment